--- a/rel.html
+++ b/rel.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>hello student</h1>
     <title>Состояние пунктов</title>
 
-    <h2>see you again</h2> 
+    <h2>VSTU</h2> 
     <h2>вызов администратора</h2>
 </body>
 </html>
