add deleted lr6.html

--- a/lr6.html
+++ b/lr6.html
@@ -11,6 +11,6 @@
     <title>Состояние пунктов</title>
 
     <h2>see you again</h2> 
-    <title>вызов администратора</title>
+    <h2>вызов администратора</h2>
 </body>
 </html>
